- Allow to set skill names on Game Config screen - Added a Soak roll button - Fixed unshake rolls when failing with same skill and wild rolls - Fixed wounds/fatigue mod input when translation too long - Allowed Academics stat and Academics skill to get different translations

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -4906,19 +4906,7 @@
 							<div class="sheet-derivecurrent">&nbsp;</div>
 							<div class="sheet-derivemisc">&nbsp;</div>
 					    </div>
-						<!-- Unshake Button -->
-						<input class="sheet-useunshakebutton" type="checkbox" name="attr_showunshake" style='display:none;' checked />
-						<div class='sheet-basetrait sheet-unshakebutton'>
-							<button class="sheet-traitbutton sheet-skillflexattbutton sheet-unshake" type='roll' name='roll_unshakeroll' title="@{unshakeroll}" value='@{whisperunshake} &{template:unshake} @{rolltunshake}' data-i18n="unshake"> Unshake</button>
-							<input class='sheet-shakenmoremods' type='checkbox' name='attr_showunshakerollmod' /><span>y</span>
-							<div class='sheet-basetrait sheet-traitmodplus'>
-								<input type='text' class='sheet-ModDesc' name='attr_unshakemodtype' placeholder='Modifier due to edges, hindrances, etc' data-i18n-placeholder="att-mod-description" />
-								+<input class="sheet-otraitmod" type="number" name="attr_unshakemod" title="@{unshakemod}" value="0" /><br />
-								<input type='checkbox' value='/w gm' name='attr_whisperunshake' /> <span class='sheet-ModDesc' data-i18n="whisper-roll-to-gm">Whisper roll to GM</span>
-							</div>
-							<input type='hidden' name='attr_rolltunshake' value='{{name=@{character_name} }} {{skill_roll=[[@{spirit_rank} [Spirit] + @{sprollMod} + @{unshakemod} [@{unshakemodtype}] + @{ModSum}[Wounds, Fatigue, Distracted] + @{traitmods} ]] }} {{mook=[[1d0+@{wdNum}]]}} {{wild_die=[[ 1d@{wilddie}! [Wild Die] + @{spiritmod} + @{sprollMod} + @{unshakemod} [@{unshakemodtype}] + @{ModSum}[Wounds, Fatigue, Distracted] + @{traitmods} ]]}}' />
-						</div>
-    					<!-- Derived Stats -->
+    					<!-- Conviction -->
     					<input class='sheet-useConviction' type='checkbox' name='attr_useConviction' style="display: none" />
     					<div class="sheet-base sheet-corederived sheet-conviction">
     					    <div class='sheet-basederived'>
@@ -4929,6 +4917,35 @@
     					        <div class="sheet-derivemisc"><input class="sheet-hasconviction" type="checkbox" value="1" name="attr_conviction" /><span class="sheet-convictiontoken"></span></div>
     					    </div>
     					</div>
+						<div class="sheet-recovery">
+							<!-- Unshake Button -->
+							<input class="sheet-useunshakebutton" type="checkbox" name="attr_showunshake" style="display:none;" checked />
+							<div class="sheet-basetrait sheet-unshakebutton">
+								<button class="sheet-traitbutton sheet-skillflexattbutton sheet-unshake" type='roll' name='roll_unshakeroll' title="@{unshakeroll}" value='@{whisperunshake} &{template:unshake} @{rolltunshake}' data-i18n="unshake"> Unshake</button>
+								<input class='sheet-moremods' type='checkbox' name='attr_showunshakerollmod' /><span>y</span>
+								<div class='sheet-basetrait sheet-traitmodplus'>
+									<input type='text' class='sheet-ModDesc' name='attr_unshakemodtype' placeholder='Modifier due to edges, hindrances, etc' data-i18n-placeholder="att-mod-description" />
+									+<input class="sheet-otraitmod" type="number" name="attr_unshakemod" title="@{unshakemod}" value="0" /><br />
+									<input type='checkbox' value='/w gm' name='attr_whisperunshake' /> <span class='sheet-ModDesc' data-i18n="whisper-roll-to-gm">Whisper roll to GM</span>
+								</div>
+								<input type='hidden' name='attr_rolltunshake' value='{{name=@{character_name} }} {{skill_roll=[[@{spirit_rank} [Spirit] + @{sprollMod} + @{unshakemod} [@{unshakemodtype}] + @{ModSum}[Wounds, Fatigue, Distracted] + @{traitmods} ]] }} {{mook=[[1d0+@{wdNum}]]}} {{wild_die=[[ 1d@{wilddie}! [Wild Die] + @{spiritmod} + @{sprollMod} + @{unshakemod} [@{unshakemodtype}] + @{ModSum}[Wounds, Fatigue, Distracted] + @{traitmods} ]]}}' />
+							</div>
+							<!-- Soak Button -->
+							<input class="sheet-usesoakbutton" type="checkbox" name="attr_showsoak" style="display:none;" checked />
+							<div class="sheet-basetrait sheet-soakbutton">
+								<button class="sheet-traitbutton sheet-skillflexattbutton sheet-soak" type='roll' name='roll_soakroll' title="@{soakroll}" value='@{whispersoak} &{template:roll} @{rolltSoak} @{setmods} @{showtraitmods}' data-i18n="soak">Soak</button>
+								<input class='sheet-moremods' type='checkbox' name='attr_showsoakrollmod' /><span>y</span>
+								<div class='sheet-basetrait sheet-traitmodplus'>
+									<input type='text' class='sheet-ModDesc' name='attr_soakmodtype' placeholder='Modifier due to edges, hindrances, etc' data-i18n-placeholder="att-mod-description" />
+									+<input class="sheet-otraitmod" type="number" name="attr_soakmod" title="@{soakmod}" value="0" /><br />
+									<input type='checkbox' value='/w gm' name='attr_whispersoak' /> <span class='sheet-ModDesc' data-i18n="whisper-roll-to-gm">Whisper roll to GM</span>
+								</div>
+								<input type='hidden' name='attr_rolltSoak' value='{{name=@{character_name} }} {{trait=^{soak}}} {{skill_rank=@{vigor_display}+@{soakmod} }} {{skill_roll=[[@{vigor_rank} [Vigor] + @{virollMod} + @{soakmod} [@{soakmodtype}] + @{ModSum}[Wounds, Fatigue, Distracted] + @{traitmods} ]] }} {{mook=[[1d0+@{wdNum}]]}} {{wild_die=[[ 1d@{wilddie}! [Wild Die] + @{vigormod} + @{virollMod} + @{soakmod} [@{soakmodtype}] + @{ModSum}[Wounds, Fatigue, Distracted] + @{traitmods} ]]}}' />							
+							</div>
+						</div>
+						
+    					<!-- Derived Stats -->
+    					<hr class="sheet-block-separator" />
     					<h4 class='sheet-sectionHeading' data-i18n="derived-stats">Derived Stats</h4>
     					<input type="checkbox" class="sheet-hideAtts" name="attr_hideCoreDerived" /><span class="sheet-showhide"></span>
     					<div class='sheet-base sheet-corederived'>
@@ -4997,7 +5014,7 @@
     					    <!-- Academics -->
     					    <input class='sheet-useAcademics' type='checkbox' name='attr_useacademics' value='1' style='width: 15px; display: none;' />
     					    <div class="sheet-basederived sheet-Academics">
-    					        <div class="sheet-derivelabel" data-i18n="academics">Academics</div>
+    					        <div class="sheet-derivelabel" data-i18n="academics-stat">Academics</div>
     					        <div class="sheet-derivebase"><input type="number" name="attr_academics" class="sheet-derivedStat" title="@{academics}" value="0"/></div>
     							<div class="sheet-derivemod"><input type="number" name="attr_academicsMod" class="sheet-derivedStat" title="@{academicsMod}" value="0"/></div>
     							<div class="sheet-derivecurrent"><input type="number" name="attr_academicsCur" title="@{academicsCur}" class="sheet-derivedStat" readonly /></div>
@@ -6922,6 +6939,7 @@
 						<label class="sheet-miscItem"><input type="checkbox" class="sheet-usePartyBag" name="attr_usePG" checked /> <span data-i18n="show-party-bag">Show Party Bag</span></label>
 						<label class="sheet-miscItem"><input type='checkbox' class='sheet-useQuestLog' name="attr_questlog" checked /> <span data-i18n="show-quest-log">Show Quest Log</span></label>
 						<label class="sheet-miscItem"><input type="checkbox" class="sheet-useunshakebutton" name="attr_showunshake" checked /> <span data-i18n="show-unshake-button">Show Unshake Button</span></label>
+						<label class="sheet-miscItem"><input type="checkbox" class="sheet-usesoakbutton" name="attr_showsoak" checked /> <span data-i18n="show-soak-button">Show Soak Button</span></label>
 						<label class="sheet-miscItem"><input type="checkbox" class="sheet-showVehicles sheet-useVehicles" name="attr_vehicle" style="width: 15px;"> <span data-i18n="show-the-vehicles-tab">Show the Vehicles Tab</span></label>
         			    <input type="checkbox" class="sheet-showVehicles" name="attr_vehicle" style="display: none;" />
         			    <label class="sheet-miscItem sheet-vehicleTypes"><input class="sheet-useSailingShips" type="checkbox" name="attr_sailingShip" /> <span data-i18n="show-sailing-ship">Show Sailing Ship</span></label>
@@ -6948,7 +6966,7 @@
     			    <input type="checkbox" class="sheet-hideDS" name="attr_hideDS" /><span class="sheet-showDS"></span>
     			    <h3 class='sheet-configSectionTitle' data-i18n="additional-derived-stats">Additional Derived Stats</h3>
     			    <div class="sheet-dsconfig">
-    			        <!--Academics--><label class="sheet-dsItem" data-i18n-title="academic-text"  title="Used to track a character's academic score. ETU uses this field."><input class='sheet-useAcademics' type='checkbox' name='attr_useacademics' value='1' style='width: 15px;' /><span data-i18n="academics">Academics</span></label>
+    			        <!--Academics--><label class="sheet-dsItem" data-i18n-title="academic-text"  title="Used to track a character's academic score. ETU uses this field."><input class='sheet-useAcademics' type='checkbox' name='attr_useacademics' value='1' style='width: 15px;' /><span data-i18n="academics-stat">Academics</span></label>
     			        <!--Corruption--><label class="sheet-dsItem" data-i18n-title="corruption-text" title="Used to track a character's corruption. Settings like Lankhmar use this field."><input type="checkbox" class="sheet-useCorruption" name="attr_Corruption" style="width: 15px;" /><span data-i18n="corruption">Corruption</span></label>
     			        <!--Fame--><label class="sheet-dsItem" data-i18n-title="fame-text" title="Used to track how famous a character is. Settings like Pirates of the Spanish Main use this field."><input type="checkbox" class="sheet-useFame" name="attr_potsmFame" style="width: 15px;" /><span data-i18n="fame">Fame</span></label>
     			        <!--Firewall--><label class="sheet-dsItem" data-i18n-title="firewall-text" title="Protects a character from being hacked. Starts at 4 and can be modified. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useFirewall" style="width: 15px;" name="attr_izFirewall" /><span data-i18n="firewall">Firewall</span></label>
@@ -7099,9 +7117,45 @@
 			<div class="sheet-release">
 			    <h3 class='subsectionHeader' data-i18n="release-notes">Release Notes</h3>
                 <label class="sheet-rowlabel">
+			        <input type='checkbox' class='sheet-releasenotes' name='attr_releasenotes35' value='1' /><span class='sheet-releasenotes' style='color: red;'><h4 class="sheet-rnversion"><span data-i18n="version">Version</span> 3.5</h4></span>
+			    </label>
+			    <input type='checkbox' class='sheet-releasenotes' style='display: none;' name='attr_releasenotes35' value='1' />
+        		<div class='sheet-releasenotes'>
+        		   <p data-i18n="changes-this-release">
+        		       Changes this release:
+        		   </p>
+				   <ul>
+						<li><strong data-i18n="bug-fixes">Bug Fixes</strong></li>
+						<ul>
+							<li data-i18n="unshake-template-not-working-when-skill-equal-joker">Unshake roll would not display failure when Skill roll and Wild die were equal.</li>
+							<li data-i18n="wounds-fatigue-wonky-display">Wounds and Fatigue modifiers display going wonky when translations where too long (e.g. French). Fixed by reducing the font size for all languages.</li>
+							<li data-i18n="allow-translations-academics">Allowed Academics (derived stat) and Acedemics (SWADE Skill) to have different translations (e.g. French).</li>
+						</ul>
+
+                        <li><strong data-i18n="sheet-enhancements">Functionality Enhancements</strong></li>
+                        <ul>
+                            <li data-i18n="soak-button-added">Added a Soak button (based on vigor, allow to set mods dedicated to Soak rolls)</li>
+							<li data-i18n="rename-skills-from-game-settings">Allow to rename skills directly from game settings page</li>
+						</ul>
+
+                        <li><strong data-i18n="known-issues">Known Issues</strong></li>
+                        <ul>
+                            <li data-i18n="statblock-doesnt-support">Statblock Output Button doesn't currently output:</li>
+                            <ul>
+                                <li data-i18n="spell-information">Spell information</li>
+                                <li data-i18n="talismans">Talismans</li>
+                                <li data-i18n="cybernetics-slash-augmentations">Cybernetics/Augmentations</li>
+                                <li data-i18n="rippertech">Rippertech</li>
+                            </ul>
+                            <li data-i18n="talismans-are-missing-from-sheet">Talismans are missing from the sheet completely</li>
+                        </ul>
+				   </ul>
+				</div>
+				
+                <label class="sheet-rowlabel">
 			        <input type='checkbox' class='sheet-releasenotes' name='attr_releasenotes34' value='1' /><span class='sheet-releasenotes' style='color: red;'><h4 class="sheet-rnversion"><span data-i18n="version">Version</span> 3.4</h4></span>
 			    </label>
-			    <input type='checkbox' class='sheet-releasenotes' style='display: none;' name='attr_releasenotes33' value='1' />
+			    <input type='checkbox' class='sheet-releasenotes' style='display: none;' name='attr_releasenotes34' value='1' />
         		<div class='sheet-releasenotes'>
         		   <p data-i18n="changes-this-release">
         		       Changes this release:
@@ -7121,17 +7175,6 @@
                             <li data-i18n="setting-to-allow-pace-to-ignore-wounds">Setting to allow Pace to ignore Wounds</li>
                             <li data-i18n="option-for-custom-wild-card-icon">Option for custom Wild Card Icon (supports unicode characters)</li>
                             <li data-i18n="statblock-output-button">Statblock Output button</li>
-                        </ul>
-                        <li><strong data-i18n="known-issues">Known Issues</strong></li>
-                        <ul>
-                            <li data-i18n="statblock-doesnt-support">Statblock Output Button doesn't currently output:</li>
-                            <ul>
-                                <li data-i18n="spell-information">Spell information</li>
-                                <li data-i18n="talismans">Talismans</li>
-                                <li data-i18n="cybernetics-slash-augmentations">Cybernetics/Augmentations</li>
-                                <li data-i18n="rippertech">Rippertech</li>
-                            </ul>
-                            <li data-i18n="talismans-are-missing-from-sheet">Talismans are missing from the sheet completely</li>
                         </ul>
 				   </ul>
 				</div>
@@ -7563,10 +7606,10 @@
 			{{#rollGreater() skill_roll 3}}<span data-i18n="unshake-desc4">succeeds</span>! {{name}} <span data-i18n="unshake-desc5">can now act</span>.{{/rollGreater() skill_roll 3}}
 			{{#^rollGreater() skill_roll 3}}<span data-i18n="unshake-desc6">fails</span>!{{/^rollGreater() skill_roll 3}}
 		{{/rollGreater() skill_roll wild_die}}
-		{{#rollGreater() wild_die skill_roll}}
+		{{#^rollGreater() skill_roll wild_die}}
 			{{#rollGreater() wild_die 3}}<span data-i18n="unshake-desc4">succeeds</span>! {{name}} <span data-i18n="unshake-desc5">can now act</span>.{{/rollGreater() wild_die 3}}
 			{{#^rollGreater() wild_die 3}}<span data-i18n="unshake-desc6">fails</span>!{{/^rollGreater() wild_die 3}}
-		{{/rollGreater() wild_die skill_roll}}
+		{{/^rollGreater() skill_roll wild_die}}
 	</div>
 </rolltemplate>
 
