--- a/Starfinder (simple)/Starfinder (simple).html
+++ b/Starfinder (simple)/Starfinder (simple).html
@@ -787,10 +787,10 @@
 				</div>
 				<div class="sheet-table">
 				    <div class="sheet-table-row">
-				        <span class="sheet-table-subheader">N Y</span>
-				        <span class="sheet-table-subheader"></span>
+				        <span class="sheet-table-subheader" style="width:28px;">N Y</span>
+				        <span class="sheet-table-subheader" style="width:50px;"></span>
 				        <span class="sheet-table-subheader">Trick Attack Skill</span>
-				        <span class="sheet-table-subheader">Op. Level</span>
+				        <span class="sheet-table-subheader" style="width:50px;">Op. Level</span>
 			        </div>
 				    <div class="sheet-table-row">
 			            <span class="sheet-table-data-left" style="vertical-align:middle;"><input title="trick-attack" type="radio" name="attr_trick-attack" checked="true" value="" /><input type="radio" title="trick-attack" name="attr_trick-attack" value="&{template:pf_check}{{name=Trick Attack}}{{check=**CR**[[@{trick-attack-skill} - 20]]or lower }}{{foo=If you succeed at the check, you deal @{trick-attack-level} additional damage?{Which condition to apply? | none, | flat-footed, and the target is flat-footed | off-target, and the target is off-target | bleed, and the target is bleeding ?{How much bleed? &amp;#124; 1 &amp;#125; | hampered, and the target is hampered (half speed and no guarded step) | interfering, and the target is unable to take reactions | staggered, and the target is staggered (Fort **DC**[[10+[[(floor(@{level}/2))]]+[[@{DEX-mod}]]]]negates) | stun, and the target is stunned (Fort **DC**[[10+[[(floor(@{level}/2))]]+[[@{DEX-mod}]]]]negates) | knockout, and the target is unconscious for 1 minute (Fort **DC**[[10+[[(floor(@{level}/2))]]+[[@{DEX-mod}]]]]negates)} }}" /></span>
@@ -798,16 +798,27 @@
 			            <span class="sheet-table-data-center">
 			                <select title="trick-attack-skill" name="attr_trick-attack-skill">
 			                    <option value="[[d20 + [[@{Acrobatics}]] ]]">Daredevil's Acrobatics</option>
+			                    <option value="[[10 + [[@{Acrobatics}]] ]]">Daredevil's Acrobatics (take 10)</option>
 			                    <option value="[[d20 + [[@{Bluff}]] ]]" selected>Bluff</option>
+			                    <option value="[[10 + [[@{Bluff}]] ]]" >Bluff (take 10)</option>
 			                    <option value="[[d20 + [[@{Bluff}]] + 4]]">Spy's Bluff</option>
+			                    <option value="[[10 + [[@{Bluff}]] + 4]]">Spy's Bluff (take 10)</option>
 			                    <option value="[[d20 + [[@{Computers}]] +4]]">Hacker's Computers</option>
+			                    <option value="[[10 + [[@{Computers}]] +4]]">Hacker's Computers (take 10)</option>
 			                    <option value="[[d20 + [[@{Engineering}]] +4]]">Gadgeteer's Engineering</option>
+			                    <option value="[[10 + [[@{Engineering}]] +4]]">Gadgeteer's Engineering (take 10)</option>
 			                    <option value="[[d20 + [[@{Intimidate}]] ]]">Intimidate</option>
+			                    <option value="[[10 + [[@{Intimidate}]] ]]">Intimidate (take 10)</option>
 			                    <option value="[[d20 + [[@{Sense-Motive}]] +4]]">Detective's Sense Motive</option>
+			                    <option value="[[10 + [[@{Sense-Motive}]] +4]]">Detective's Sense Motive (take 10)</option>
 			                    <option value="[[d20 + [[@{Sleight-of-Hand}]] ]]">Thief's Sleight of Hand</option>
+			                    <option value="[[10 + [[@{Sleight-of-Hand}]] ]]">Thief's Sleight of Hand (take 10)</option>
 			                    <option value="[[d20 + [[@{Stealth}]] ]]">Stealth</option>
+			                    <option value="[[10 + [[@{Stealth}]] ]]">Stealth (take 10)</option>
 			                    <option value="[[d20 + [[@{Stealth}]] +1]]">Ghost's Stealth</option>
+			                    <option value="[[10 + [[@{Stealth}]] +1]]">Ghost's Stealth (take 10)</option>
 			                    <option value="[[d20 + [[@{Survival}]] +4]]">Explorer's Survival</option>
+			                    <option value="[[10 + [[@{Survival}]] +4]]">Explorer's Survival (take 10)</option>
 			                </select>
 		                </span>
 		                <span class="sheet-table-data-center">
