--- a/Forbidden_Lands/Forbidden_Lands.htm
+++ b/Forbidden_Lands/Forbidden_Lands.htm
@@ -447,7 +447,7 @@
                     <input type="hidden" name="attr_gear_die_two" value="1" />
                     <input type="hidden" name="attr_gear_die_one" value="1" />
                 </div>
-                <div class="grid-item span-three" style="padding: 0 0 5px 0;">
+                <div class="grid-item span-three" style="padding: 0px 0 5px 0;margin-top: -10px;">
                     <input class="input" type="hidden" name="attr_current_preset" value="" readonly />                    
                     <input type="hidden" name="attr_include_with_roll" value="" readonly />
                     <span class="label" data-i18n="current-preset">Current Preset</span>
@@ -1820,6 +1820,8 @@
             getAttrs(["reputation"], function(values) {
                 const reputation = parseInt(values.reputation,10)||0;
                 setAttrs({
+                    attribute: 0, 
+                    skill: 0,
                     gear: reputation,
                     current_preset: getTranslationByKey(`reputation-roll`),
                     include_with_roll: ""
@@ -1878,6 +1880,8 @@
         getAttrs(["ar"], function(values) {
             const ar = parseInt(values.ar,10)||0;
             setAttrs({
+                attribute: 0, 
+                skill: 0,
                 gear: ar,
                 current_preset: getTranslationByKey(`armor-roll`),
                 include_with_roll: ""
