--- a/Forbidden_Lands/Forbidden_Lands.htm
+++ b/Forbidden_Lands/Forbidden_Lands.htm
@@ -1757,6 +1757,7 @@
     // you can often replace simple if/then expressions with a single line ternary operator.    
                 skill: parseInt(values[getSkill(which)], 10) || 0,
     // uses the translation key
+                gear: 0,
                 current_preset: whichKey,                
                 include_with_roll: ""
             });
