--- a/Forbidden_Lands/Forbidden_Lands.htm
+++ b/Forbidden_Lands/Forbidden_Lands.htm
@@ -5,7 +5,7 @@
 <input class="tab character" name="attr_tab" i18n-title="character" title="Character" type="radio" value="1" checked/>
 <input class="tab stronghold" name="attr_tab" i18n-title="stronghold" title="Stronghold" type="radio" value="2" />
 <input class="tab dice_only" name="attr_tab" i18n-title="dice-only" title="Dice Only" type="radio" value="3" />
-<div class="logo"><img alt="Forbidden Lands" src="https://i.imgur.com/uf0H3XX.png"></div>
+<div class="logo"><img alt="Forbidden Lands" src="https://i.imgur.com/uf0H3XX.png" style="width: 45%; margin: -5px 0 5px 0;"></div>
 
 <div class="wrapper tab-content character">
 
