--- a/Starfinder (simple)/Starfinder (simple).html
+++ b/Starfinder (simple)/Starfinder (simple).html
@@ -2413,61 +2413,61 @@
 						<span class="sheet-table-subheader">Misc</span>
 					</div>
 					<div class="sheet-table-row">
-					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Acrobatics-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=Acrobatics Check}} {{skill_chk=[[1d20 + [[@{drone-Acrobatics}]] + [[@{drone-Acrobatics-misc-mod}]] ]]}}" name="roll_drone-Acrobatics-Check"></button></span>
+					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Acrobatics-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=Acrobatics Check}} {{skill_chk=[[1d20 + [[@{drone-Acrobatics}]] ]]}}" name="roll_drone-Acrobatics-Check"></button></span>
 					    <span class="sheet-table-data-left">Acrobatics</span>
 					    <span class="sheet-table-data-center">DEX</span>
-					    <span class="sheet-table-data-center"><input title="drone-Acrobatics" type="number" name="attr_drone-Acrobatics" value="(@{drone-Acrobatics-installed} + @{drone-DEX-mod})" disabled></span>
+					    <span class="sheet-table-data-center"><input title="drone-Acrobatics" type="number" name="attr_drone-Acrobatics" value="(@{drone-Acrobatics-installed} + @{drone-DEX-mod} + @{drone-Acrobatics-misc-mod})" disabled></span>
 				    	<span class="sheet-table-data-center"><input title="drone-Acrobatics-installed" type="checkbox" name="attr_drone-Acrobatics-installed" value="(3 + @{drone-level})" /></span>
     					<span class="sheet-table-data-center"><input title="drone-Acrobatics-abil-mod" type="number" name="attr_drone-Acrobatics-abil-mod" value="@{drone-DEX-mod}" disabled></span>
-    					<span class="sheet-table-data-center"><input title="drone-Acrobatics-misc-mod" type="number" name="attr_drone-Acrobatics-misc-mod" value=0 ></span>
+    					<span class="sheet-table-data-center"><input title="drone-Acrobatics-misc-mod" type="number" name="attr_drone-Acrobatics-misc-mod" value="0"></span>
 	    			</div>
 					<div class="sheet-table-row">
-					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Athletics-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=Athletics Check}} {{skill_chk=[[1d20 + [[@{drone-Athletics}]] + [[@{drone-Athletics-misc-mod}]] ]]}}" name="roll_drone-Athletics-Check"></button></span>
+					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Athletics-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=Athletics Check}} {{skill_chk=[[1d20 + [[@{drone-Athletics}]] ]]}}" name="roll_drone-Athletics-Check"></button></span>
 					    <span class="sheet-table-data-left">Athletics</span>
 					    <span class="sheet-table-data-center">STR</span>
-					    <span class="sheet-table-data-center"><input title="drone-Athletics" type="number" name="attr_drone-Athletics" value="(@{drone-Athletics-installed} + @{drone-STR-mod})" disabled></span>
+					    <span class="sheet-table-data-center"><input title="drone-Athletics" type="number" name="attr_drone-Athletics" value="(@{drone-Athletics-installed} + @{drone-STR-mod} + @{drone-Athletics-misc-mod})" disabled></span>
 				    	<span class="sheet-table-data-center"><input title="drone-Athletics-installed" type="checkbox" name="attr_drone-Athletics-installed" value="(3 + @{drone-level})" /></span>
     					<span class="sheet-table-data-center"><input title="drone-Athletics-abil-mod" type="number" name="attr_drone-Athletics-abil-mod" value="@{drone-STR-mod}" disabled></span>
-    					<span class="sheet-table-data-center"><input title="drone-Athletics-misc-mod" type="number" name="attr_drone-Athletics-misc-mod" value=0 ></span>
+    					<span class="sheet-table-data-center"><input title="drone-Athletics-misc-mod" type="number" name="attr_drone-Athletics-misc-mod" value="0" ></span>
 	    			</div>
 					<div class="sheet-table-row">
-					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Computers-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=Computers Check}} {{skill_chk=[[1d20 + [[@{drone-Computers}]] + [[@{drone-Computers-misc-mod}]] ]]}}" name="roll_drone-Computers-Check"></button></span>
+					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Computers-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=Computers Check}} {{skill_chk=[[1d20 + [[@{drone-Computers}]] ]]}}" name="roll_drone-Computers-Check"></button></span>
 					    <span class="sheet-table-data-left">Computers</span>
 					    <span class="sheet-table-data-center">INT</span>
-					    <span class="sheet-table-data-center"><input title="drone-Computers" type="number" name="attr_drone-Computers" value="(@{drone-Computers-installed} + @{drone-INT-mod})" disabled></span>
+					    <span class="sheet-table-data-center"><input title="drone-Computers" type="number" name="attr_drone-Computers" value="(@{drone-Computers-installed} + @{drone-INT-mod} + @{drone-Computers-misc-mod})" disabled></span>
 				    	<span class="sheet-table-data-center"><input title="drone-Computers-installed" type="checkbox" name="attr_drone-Computers-installed" value="(3 + @{drone-level})" /></span>
     					<span class="sheet-table-data-center"><input title="drone-Computers-abil-mod" type="number" name="attr_drone-Computers-abil-mod" value="@{drone-INT-mod}" disabled></span>
-    					<span class="sheet-table-data-center"><input title="drone-Computers-misc-mod" type="number" name="attr_drone-Computers-misc-mod" value=0 ></span>
+    					<span class="sheet-table-data-center"><input title="drone-Computers-misc-mod" type="number" name="attr_drone-Computers-misc-mod" value="0" ></span>
 	    			</div>
 					<div class="sheet-table-row">
-					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Engineering-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=Engineering Check}} {{skill_chk=[[1d20 + [[@{drone-Engineering}]] + [[@{drone-Engineering-misc-mod}]] ]]}}" name="roll_drone-Engineering-Check"></button></span>
+					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Engineering-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=Engineering Check}} {{skill_chk=[[1d20 + [[@{drone-Engineering}]] ]]}}" name="roll_drone-Engineering-Check"></button></span>
 					    <span class="sheet-table-data-left">Engineering</span>
 					    <span class="sheet-table-data-center">INT</span>
-					    <span class="sheet-table-data-center"><input title="drone-Engineering" type="number" name="attr_drone-Engineering" value="(@{drone-Engineering-installed} + @{drone-INT-mod})" disabled></span>
+					    <span class="sheet-table-data-center"><input title="drone-Engineering" type="number" name="attr_drone-Engineering" value="(@{drone-Engineering-installed} + @{drone-INT-mod} + @{drone-Engineering-misc-mod})" disabled></span>
 				    	<span class="sheet-table-data-center"><input title="drone-Engineering-installed" type="checkbox" name="attr_drone-Engineering-installed" value="(3 + @{drone-level})" /></span>
     					<span class="sheet-table-data-center"><input title="drone-Engineering-abil-mod" type="number" name="attr_drone-Engineering-abil-mod" value="@{drone-INT-mod}" disabled></span>
-    					<span class="sheet-table-data-center"><input title="drone-Engineering-misc-mod" type="number" name="attr_drone-Engineering-misc-mod" value=0 ></span>
+    					<span class="sheet-table-data-center"><input title="drone-Engineering-misc-mod" type="number" name="attr_drone-Engineering-misc-mod" value="0" ></span>
 	    			</div>
 					<div class="sheet-table-row">
-					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Perception-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=Perception Check}} {{skill_chk=[[1d20 + [[@{drone-Perception}]] + [[@{drone-Perception-misc-mod}]] ]]}}" name="roll_drone-Perception-Check"></button></span>
+					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Perception-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=Perception Check}} {{skill_chk=[[1d20 + [[@{drone-Perception}]] ]]}}" name="roll_drone-Perception-Check"></button></span>
 					    <span class="sheet-table-data-left">Perception</span>
 					    <span class="sheet-table-data-center">WIS</span>
-					    <span class="sheet-table-data-center"><input title="drone-Perception" type="number" name="attr_drone-Perception" value="(@{drone-Perception-installed} + @{drone-WIS-mod})" disabled></span>
+					    <span class="sheet-table-data-center"><input title="drone-Perception" type="number" name="attr_drone-Perception" value="(@{drone-Perception-installed} + @{drone-WIS-mod} + @{drone-Perception-misc-mod})" disabled></span>
 				    	<span class="sheet-table-data-center"><input title="drone-Perception-installed" type="checkbox" name="attr_drone-Perception-installed" value="(3 + @{drone-level})" /></span>
     					<span class="sheet-table-data-center"><input title="drone-Perception-abil-mod" type="number" name="attr_drone-Perception-abil-mod" value="@{drone-WIS-mod}" disabled></span>
     					<span class="sheet-table-data-center"><input title="drone-Perception-misc-mod" type="number" name="attr_drone-Perception-misc-mod" value=0 ></span>
 	    			</div>
 					<div class="sheet-table-row">
-					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Stealth-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=Stealth Check}} {{skill_chk=[[1d20 + [[@{drone-Stealth}]] + [[@{drone-Stealth-misc-mod}]] ]]}}" name="roll_drone-Stealth-Check"></button></span>
+					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Stealth-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=Stealth Check}} {{skill_chk=[[1d20 + [[@{drone-Stealth}]] ]]}}" name="roll_drone-Stealth-Check"></button></span>
 					    <span class="sheet-table-data-left">Stealth</span>
 					    <span class="sheet-table-data-center">DEX</span>
-					    <span class="sheet-table-data-center"><input title="drone-Stealth" type="number" name="attr_drone-Stealth" value="(@{drone-Stealth-installed} + @{drone-DEX-mod})" disabled></span>
+					    <span class="sheet-table-data-center"><input title="drone-Stealth" type="number" name="attr_drone-Stealth" value="(@{drone-Stealth-installed} + @{drone-DEX-mod} + @{drone-Stealth-misc-mod})" disabled></span>
 				    	<span class="sheet-table-data-center"><input title="drone-Stealth-installed" type="checkbox" name="attr_drone-Stealth-installed" value="(3 + @{drone-level})" /></span>
     					<span class="sheet-table-data-center"><input title="drone-Stealth-abil-mod" type="number" name="attr_drone-Stealth-abil-mod" value="@{drone-DEX-mod}" disabled></span>
     					<span class="sheet-table-data-center"><input title="drone-Stealth-misc-mod" type="number" name="attr_drone-Stealth-misc-mod" value=0 ></span>
 	    			</div>
 					<div class="sheet-table-row">
-					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Misc-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=@{drone-Misc-skill-name} Check}} {{skill_chk=[[1d20 + [[@{drone-Misc}]] + [[@{drone-Misc-misc-mod}]] ]]}}" name="roll_drone-Misc-Check"></button></span>
+					    <span class="sheet-table-data-center"><button style="font-size:100%;" title="drone-Misc-Check" type="roll" value="&{template:pf_check} {{name=@{drone_name}'s}} {{check=@{drone-Misc-skill-name} Check}} {{skill_chk=[[1d20 + [[@{drone-Misc}]] ]]}}" name="roll_drone-Misc-Check"></button></span>
 					    <span class="sheet-table-data-left"><input title="drone-Misc-skill-name" type="text" name="attr_drone-Misc-skill-name" placeholder="Alternative Skill"></span>
 					    <span class="sheet-table-data-center">
 					        <select title="drone-Misc-skill-ability" name="attr_drone-Misc-skill-ability">
@@ -2480,7 +2480,7 @@
 								<option value="@{drone-CHA-mod}">CHA</option>
 							</select>
 						</span>
-					    <span class="sheet-table-data-center"><input title="drone-Misc" type="number" name="attr_drone-Misc" value="(@{drone-Misc-installed} + @{drone-Misc-skill-ability})" disabled></span>
+					    <span class="sheet-table-data-center"><input title="drone-Misc" type="number" name="attr_drone-Misc" value="(@{drone-Misc-installed} + @{drone-Misc-skill-ability} + @{drone-Misc-misc-mod})" disabled></span>
 				    	<span class="sheet-table-data-center"><input title="drone-Misc-installed" type="checkbox" name="attr_drone-Misc-installed" value="(3 + @{drone-level})" /></span>
     					<span class="sheet-table-data-center"><input title="drone-Misc-abil-mod" type="number" name="attr_drone-Misc-abil-mod" value="@{drone-Misc-skill-ability}" disabled></span>
     					<span class="sheet-table-data-center"><input title="drone-Misc-misc-mod" type="number" name="attr_drone-Misc-misc-mod" value=0 ></span>
