(NoReturn) some improvements
add meditation, edit modifier
fix konstitution macro, fix rangeweapon macro
Merge branch 'master' into master
spelling corrected
fix melee dmg macro
add characteristic points
change characteristic points to text
insert weight calculation
added different fire modes

--- a/NoReturn/NoReturn.html
+++ b/NoReturn/NoReturn.html
@@ -23,9 +23,9 @@
       </div>
       <div class="sheet-row">
         <div class="sheet-item sheet-lable"><label>Größe</label></div>
-        <div class="sheet-item sheet-labletexts"><input type="text" name="attr_groesse" /></div>
+        <div class="sheet-item sheet-labletexts"><input type="text" name="attr_groesse" placeholder="1.80" /></div>
         <div class="sheet-item sheet-lable"><label>Gewicht</label></div>
-        <div class="sheet-item sheet-labletexts"><input type="text" name="attr_gewicht" /></div>
+        <div class="sheet-item sheet-labletexts"><input type="number" name="attr_gewicht" value="(@{st}*3+@{ko}+@{sk})*(@{groesse}*3)" disabled="true" /></div>
         <div class="sheet-item sheet-lable"><label>Haarfarbe</label></div>
         <div class="sheet-item sheet-labletexts"><input type="text" name="attr_haarfarbe" /></div>
         <div class="sheet-item sheet-lable"><label>Augenfarbe</label></div>
@@ -800,7 +800,7 @@
             <div class="sheet-item sheet-huge"><input type="text" name="attr_meleeweaponspecial" /></div>
           </div>
           <div class="sheet-row sheet-twice sheet-Makro_mw">
-            <textarea name="attr_meleeattack_makro">/me schlägt mit @{meleeweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{meleeweaponclass} + @{meleeweapontemp} - @{malusGesamt} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
+            <textarea name="attr_meleeattack_makro">/me schlägt mit @{meleeweaponname} zu und trifft mit [[1d6! + ((@{ge} - 1) + @{meleeweaponclass} + @{meleeweapontemp} - @{malusGesamt} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
             <textarea name="attr_meleedamage_makro">/me und macht [[1d6! + ((@{st} - 1) + ?{Modifier?|0})d6 + @{meleeweapondamage}]] Schaden</textarea>
           </div>
         </div>
@@ -811,10 +811,7 @@
       <fieldset class="repeating_rangedweapons">
         <div class="sheet-quickborder">
           <div class="sheet-row">
-            <div class="sheet-item sheet-tiny">
-              <button type="roll" name="roll_rangeattack" value="@{rangeattack_makro}">
-                <label>Waffe:</label>
-              </button></div>
+            <div class="sheet-item sheet-tiny">Waffe:</div>
             <div class="sheet-item sheet-med"><input type="text" name="attr_rangedweaponname" /></div>
             <div class="sheet-item sheet-puny"></div>
             <div class="sheet-item sheet-puny"><label>Art:</label></div>
@@ -831,9 +828,23 @@
           </div>
           <div class="sheet-row">
             <div class="sheet-item sheet-small">
-              <button type="roll" name="roll_rangedamage" value="@{rangedamage_makro}">
-                <label>Damage:</label>
-              </button></div>
+              <button type="roll" name="roll_rangeattack_ersb" value="@{rangeattack_makro_ers}">
+                <label>E/R/S</label>
+              </button>
+			</div>
+            <div class="sheet-item sheet-small">
+              <button type="roll" name="roll_rangeattack_b" value="@{rangeattack_makro_b}">
+                <label>B</label>
+              </button>
+			</div>
+            <div class="sheet-item sheet-small">
+              <button type="roll" name="roll_rangeattack_v" value="@{rangeattack_makro_v}">
+                <label>A</label>
+              </button>
+			</div>
+          </div>
+          <div class="sheet-row">
+            <div class="sheet-item sheet-small">Damage:</div>
             <div class="sheet-item sheet-small"><input type="number" name="attr_rangedweapondamage" /></div>
             <div class="sheet-item sheet-puny">p /</div>
             <div class="sheet-item sheet-small"><input type="number" name="attr_rangedweapondamageMore" /></div>
@@ -842,12 +853,35 @@
             <div class="sheet-item sheet-little"><input type="number" name="attr_rangedweaponrd" /></div>
           </div>
           <div class="sheet-row">
+            <div class="sheet-item sheet-small">
+              <button type="roll" name="roll_rangedamage_ersb" value="@{rangedamage_makro_ers}">
+                <label>E/R/S</label>
+              </button>
+			</div>
+            <div class="sheet-item sheet-small">
+              <button type="roll" name="roll_rangedamage_b" value="@{rangedamage_makro_b}">
+                <label>B</label>
+              </button>
+			</div>
+            <div class="sheet-item sheet-small">
+              <button type="roll" name="roll_rangedamage_a" value="@{rangedamage_makro_a}">
+                <label>A</label>
+              </button>
+			</div>
+            <div class="sheet-item sheet-small"><input type="number" name="attr_rangedweapondamage_a" /></div>
+            <div class="sheet-item sheet-puny">p</div>
+          </div>
+          <div class="sheet-row">
             <div class="sheet-item sheet-small"><label>Sonstiges:</label></div>
             <div class="sheet-item sheet-huge"><input type="text" name="attr_rangedweaponspecial" /></div>
           </div>
           <div class="sheet-row sheet-twice sheet-Makro_rw">
-            <textarea name="attr_rangeattack_makro">/me schießt mit @{rangedweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{rangedweaponclass} - @{malusGesamt} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
-            <textarea name="attr_rangedamage_makro">/me und macht [[@{rangedweapondamage} + @{rangedweapondamageMore} * (?{Schussanzahl?|1}-1) + ?{Guter Treffer?|0}d6 + ?{Speizalmunition?|0}]] Schaden</textarea>
+            <textarea name="attr_rangeattack_makro_ers">/me schießt mit @{rangedweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{rangedweaponclass} - @{malusGesamt} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
+            <textarea name="attr_rangeattack_makro_b">/me schießt mit @{rangedweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{rangedweaponclass} - @{malusGesamt} + ?{Streufeuer|nein, 0|ja, 2} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
+            <textarea name="attr_rangeattack_makro_v">/me schießt mit @{rangedweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{rangedweaponclass} - @{malusGesamt} + ?{Sperrfeuer|nein, @{rangedweapondamageMore}|ja, 0} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
+            <textarea name="attr_rangedamage_makro_ers">/me und macht [[@{rangedweapondamage} + @{rangedweapondamageMore} * (?{Schussanzahl?|1}-1) + ?{Guter Treffer?|0}d6 + ?{Speizalmunition?|0}]] Schaden</textarea>
+            <textarea name="attr_rangedamage_makro_b">/me und macht [[@{rangedweapondamage} + @{rangedweapondamageMore} * (?{Schussanzahl?|1}-1) + ?{Konzentriertes Feuer|nein, 0|ja, 10} + ?{Guter Treffer?|0}d6 + ?{Speizalmunition?|0}]] Schaden</textarea>
+            <textarea name="attr_rangedamage_makro_a">/me und macht [[@{rangedweapondamage_a} + 10 + @{rangedweapondamageMore} * 2 + ?{Guter Treffer?|0}d6 + ?{Speizalmunition?|0}]] Schaden</textarea>
           </div>
         </div>
       </fieldset>
@@ -870,7 +904,7 @@
       <div class="sheet-col sheet-inv">
         <h3>Charaktermerkmale:</h3>
         <fieldset class="repeating_charMerkmale" style="margin:auto;">
-          <input type="text" style="width:85%" name="attr_charMerkmale" />(<input type="number" style="width:10%;" name="attr_charMerkmale_punkte" />)
+          <input type="text" style="width:85%" name="attr_charMerkmale" />(<input type="text" style="width:10%;" name="attr_charMerkmale_punkte" />)
         </fieldset>
       </div>
   </div>
