--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -24,6 +24,7 @@
                     <li>Rolltemplate text. On critical failure for parry, added additional notes. Suggested by Mike W.</li>
                     <li>Rolltemplate text. On critical failure for block, added additional notes. Suggested by Mike W.</li>
                     <li>Rolltemplate text. On critical success for any active defense, added additional notes. Suggested by Mike W.</li>
+                    <li>Bio\Misc. Tab. Added Training textarea below Background history & notes.</li>
                 </ul>
 	            <label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 	            <button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -2225,7 +2226,7 @@
 			</div> <!-- .sheet-table -->
 		</div> <!-- .sheet-box .sheet-background-info -->
 		
-		<!-- _____ _____ MISC INFO BOX _____ _____ -->
+		<!-- _____ _____ Background history & Notes INFO BOX _____ _____ -->
 		<div class="sheet-box sheet-misc-notes">
 			<div class="sheet-table">
 				<div class="sheet-header">
@@ -2234,6 +2235,20 @@
 				<div class="sheet-row sheet-row-textarea">
 					<div class="sheet-cell sheet-col0">
 					    <textarea name="attr_misc_notes"></textarea>
+					</div>
+				</div> <!-- .sheet-row -->
+			</div> <!-- .sheet-table -->
+		</div> <!-- .sheet-box .sheet-misc-notes -->
+		
+		<!-- _____ _____ TRAINING INFO BOX _____ _____ -->
+		<div class="sheet-box sheet-training-notes">
+			<div class="sheet-table">
+				<div class="sheet-header">
+					<div class="sheet-cell sheet-col0">Training</div>
+				</div> <!-- .sheet-header -->
+				<div class="sheet-row sheet-row-textarea">
+					<div class="sheet-cell sheet-col0">
+					    <textarea name="attr_training_notes"></textarea>
 					</div>
 				</div> <!-- .sheet-row -->
 			</div> <!-- .sheet-table -->
@@ -3634,6 +3649,7 @@
 	    <li>Rolltemplate text. On critical failure for block, added additional notes. Suggested by Mike W.</li>
 	    <li>Rolltemplate text. On critical success for any active defense, added additional notes. Suggested by Mike W.</li>
 	    <li>Dev Notes: repeating_defense; added hidden attr_defense_type, values 1 to 5. Needed to determine notes for criticals on active defenses.</li>
+	    <li>Bio\Misc. Tab. Added Training textarea below Background history & notes.</li>
 	</ul>
 	
 	<h4>Version 1.6.0</h4>
